projects/compiler/test/typechecker/import/error_nonrelative_not_found.out
Error at %FILE_NAME%:1:15
Could not import module
  |  import a from "foo"
                   ^
Could not find module named 'foo'
